# raycaster

.github/: dependabot.yml
backend/: Cargo.toml  watch.py
backend/src/: client.rs  error.rs  game.rs  lib.rs  main.rs  map.rs  net.rs  server.rs  vector.rs
backend/src/game/: client.rs  entity.rs  game.rs  map.rs  mod.rs  start.rs  vector.rs
backend/src/net/: networking.rs  protocol.rs
backend/src/protocol/: macros.rs  mod.rs  payload.rs  payloads.rs  types.rs
backend/src/server/: game.rs  map.rs  mod.rs  start.rs  vector.rs
client/: .gitignore  Cargo.toml  filewatcher.py  serve-client.py  serve-static.sh  watch.py
client/public/: index.html
client/public/js/: client.js  config.js  entity.js  game.js  gameloop.js  input.js  main.js  map.js  network.js  protocol.js  ray.js  render.js  vector.js
client/src/: bindings.rs  controls.rs  frontend.rs  game.rs  lib.rs  macros.rs  network.rs  renderer.rs
client/static/: .gitignore  index.html  start.js  style.css
common/: Cargo.toml
common/proc/: Cargo.toml
common/proc/src/: lib.rs
common/src/: bitflags.rs  entity.rs  error.rs  gamestate.rs  input.rs  lib.rs  map.rs  vector.rs
common/src/protocol/: macros.rs  mod.rs  payload.rs  payloads.rs
maps/: default  default.map
util/filewatcher/: filewatcher.py
