[package]
name = "backend"
version = "0.1.0"
authors = ["Flying-Toast"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
common = { path = "../common" }
tokio-tungstenite = "0.15"
tokio = { version = "1.12", features = ["rt", "rt-multi-thread"] }
futures-util = "0.3"
flume = "0.10"
rand = "0.8"
lz4-compress = "0.1"
