[package]
name = "client"
version = "0.1.0"
authors = ["Flying-Toast"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[dependencies]
common = { path = "../common" }
wasm-bindgen = "0.2"
js-sys = "0.3"
lz4-compress = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
	"Window",
	"WebSocket",
	"Location",
	"BinaryType",
	"MessageEvent",
	"console",
	"KeyboardEvent",
	"CanvasRenderingContext2d",
	"HtmlCanvasElement",
	"Document",
]
